--- a/my-project/package.json
+++ b/my-project/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "flyio": "^0.6.0",
+    "marked": "^0.5.2",
     "mpvue": "^1.0.11",
     "vuex": "^3.0.1",
     "vux": "^2.9.2"
