--- a/my-project/package.json
+++ b/my-project/package.json
@@ -11,11 +11,10 @@
     "lint": "eslint --ext .js,.vue src"
   },
   "dependencies": {
-    "ali-oss": "^6.1.0",
     "flyio": "^0.6.0",
     "marked": "^0.5.2",
-    "md5-js": "0.0.3",
     "mpvue": "^1.0.11",
+    "mpvue-weui": "^1.0.4",
     "vuex": "^3.0.1",
     "vux": "^2.9.2"
   },
